created container including about me page info such as photo and bio text, styled page layout with rows and columns. named divs accordingly to better locate specific sections.

--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
              <li class="nav-item">
               <a class="nav-link" href="Home.html">Home</a>
              </li>
@@ -34,5 +34,11 @@
           </ul>
         </div>
       </nav>
+
+      <header class="jumbotron text-center">
+        <h1 class="display-4">Welcome!</h1>
+        <h4>Welcome to my portoflio website</h4>
+
+    </header>
  </body>
 </html>
