--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
              <li class="nav-item">
               <a class="nav-link" href="Home.html">Home</a>
              </li>
@@ -34,5 +34,28 @@
           </ul>
         </div>
       </nav>
+    <main class="container">
+       <h1 class="display-4">About Me</h1>
+         <section class="row">
+           <figure class="col-3">
+             <img class="img-fluid" 
+              src="file:///Users/dylanbreznay/Desktop/MyWebsite/dbreznay.github.io/dbreznay.github.io/Myself.JPG" 
+              alt="Me" title="Me">
+           </figure>
+
+          <p class="col-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Phasellus eleifend orci diam, nec sodales tellus eleifend a. 
+            Donec felis velit, malesuada ac nisi quis, gravida finibus massa. 
+            Suspendisse vulputate dictum nisl eu consectetur. 
+            Mauris rutrum nec risus quis molestie. Vivamus malesuada pretium sodales. 
+            Aliquam imperdiet libero posuere, scelerisque lacus vel, imperdiet lorem. 
+            Aenean quis accumsan ligula. In mollis blandit velit in lacinia. 
+            In vel ligula et nulla ultricies congue vel tincidunt enim. 
+            Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+
+         </section>
+
+
+    </main>
  </body>
 </html>
