Styled cards to be side by side spaced evenly and congruent

--- a/experience.html
+++ b/experience.html
@@ -36,24 +36,46 @@
 
     <main class="container">
          <h1 class="display-4">My Experience</h1>
-
-           <section class="card">
-              <figure class="card-header">
-                  <h4>Automation Programmer</h4>
-              </figure>
-           <blockquote class="card-body text-center">
-                  <strong><p>In December of 2019, I became a Control4-certified Automation
-                    Programmer. I learnd and mastered skills to build entire custom smart-home projects
-                    from scratch.
-                  </p></strong> 
-               </blockquote>
-               <ul>
-                 <li>I customized lighting scenes for various events/settings</li>
-                 <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
-                 <li>I integrated programs that allowed home owners to easily control all aspects 
-                of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
-               </ul> 
-          </section>
+         <div class="row">
+            <div class="col-6"> 
+               <section class="card">
+                  <figure class="card-header">
+                      <h4>Automation Programmer</h4>
+                  </figure>
+               <blockquote class="card-body text-center">
+                      <strong><p>In December of 2019, I became a Control4-certified Automation
+                        Programmer. I learnd and mastered skills to build entire custom smart-home projects
+                        from scratch.
+                      </p></strong> 
+                   </blockquote>
+                   <ul>
+                     <li>I customized lighting scenes for various events/settings</li>
+                     <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
+                     <li>I integrated programs that allowed home owners to easily control all aspects 
+                    of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
+                   </ul> 
+              </section>
+            </div>
+         <div class="col-6">
+            <section class="card">
+                  <figure class="card-header">
+                    <h4>Automation Programmer</h4>
+                  </figure>
+                <blockquote class="card-body text-center">
+                   <strong><p>In December of 2019, I became a Control4-certified Automation
+                     Programmer. I learnd and mastered skills to build entire custom smart-home projects
+                     from scratch.
+                   </p></strong> 
+                </blockquote>
+                <ul>
+                  <li>I customized lighting scenes for various events/settings</li>
+                  <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
+                  <li>I integrated programs that allowed home owners to easily control all aspects 
+                 of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
+                </ul> 
+           </section>
+         </div>
+       </div>
      </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
