--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
          <section class="row">
            <figure class="col-3">
              <img class="img-fluid" 
-              src="explosivo-portfolio-responsivo/assets/Myself.JPG" 
+              src="assets/Myself.JPG" 
               alt="Me" title="Me">
            </figure>
 
