Deleted style.css, added footer with social media and indeed links to each page, added image to welcome page, added jumbotron to about me paragraph.

--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="styleshet" text="text/css" href="assets/portfolio.css">
-
+  
   <title>About Me</title>
  </head>
  <body>
@@ -33,7 +32,7 @@
           </ul>
         </div>
       </nav>
-    <main class="container">
+    <header class="container">
        <h1 class="display-4">About Me</h1>
          <section class="row">
            <figure class="col-3">
@@ -42,20 +41,26 @@
               alt="Me" title="Me">
            </figure>
 
-          <p class="col-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Phasellus eleifend orci diam, nec sodales tellus eleifend a. 
-            Donec felis velit, malesuada ac nisi quis, gravida finibus massa. 
-            Suspendisse vulputate dictum nisl eu consectetur. 
-            Mauris rutrum nec risus quis molestie. Vivamus malesuada pretium sodales. 
-            Aliquam imperdiet libero posuere, scelerisque lacus vel, imperdiet lorem. 
-            Aenean quis accumsan ligula. In mollis blandit velit in lacinia. 
-            In vel ligula et nulla ultricies congue vel tincidunt enim. 
-            Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          <p class=" jumbotron col-9"> <strong> I'm Dylan breznay!</strong> I was born in Redondo Beach, CA. I moved to nashville when i was
+              3 with my family and have called it home ever since. I currently live in Franklin, TN. I am a father
+              to a 7 year old son. I currently work as a Low volt tech/Automation Programmer for Home Theatre experts LLC
+          </p>
 
          </section>
 
 
-    </main>
+        </header>
+    <footer class="container-fluid footer-style fixed-bottom">
+        <div class="container">
+          <div class="row">
+              <div class="col-md-6">
+                <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+              
+                <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+              </div>
+          </div>
+      </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
