--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="styleshet" type="text/css" href="assets/portfolio.css">
  
   <title>My Portfolio</title>
  </head>
@@ -34,11 +33,24 @@
         </div>
       </nav>
 
-      <header class="jumbotron text-center">
+      <header class="jumbotron text-center bg-md">
+          <img class="img-fluid" 
+           src="assets/nashville.jpeg" 
+           alt="Me" title="Me">
         <h1 class="display-4">Welcome!</h1>
         <h4>Welcome to my portoflio website</h4>
-
     </header>
+    <footer class="container-fluid footer-style fixed-bottom">
+      <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+              <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+            
+              <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
+  </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
