--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="styleshet" text="text/css" href="assets/portfolio.css">
   
   <title>Experience</title>
  </head>
@@ -56,27 +55,34 @@
                    </ul> 
               </section>
             </div>
-         <div class="col-6">
+          <div class="col-6">
             <section class="card">
                   <figure class="card-header">
-                    <h4>Automation Programmer</h4>
+                    <h4>Low Voltage Technician</h4>
                   </figure>
                 <blockquote class="card-body text-center">
-                   <strong><p>In December of 2019, I became a Control4-certified Automation
-                     Programmer. I learnd and mastered skills to build entire custom smart-home projects
-                     from scratch.
-                   </p></strong> 
+                   <strong><p>Since February of 2019 I've also been a Tech at Home Theatre Experts LLC </p></strong> 
                 </blockquote>
                 <ul>
-                  <li>I customized lighting scenes for various events/settings</li>
-                  <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
-                  <li>I integrated programs that allowed home owners to easily control all aspects 
-                 of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
+                  <li>I pre-wire houses to be integrated with Contol4 Smart Home Technologies</li>
+                  <li>I install home theatre equipment such as tvs, projectors, and surround sound systems</li>
+                  <li>I provide services for equipent installed by our company by troubleshooting issues as well as Control4 integration </li>
                 </ul> 
            </section>
          </div>
        </div>
      </main>
+     <footer class="container-fluid footer-style fixed-bottom">
+      <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+              <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+            
+              <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
+  </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
