--- a/experience.html
+++ b/experience.html
@@ -32,16 +32,27 @@
           </ul>
         </div>
     </nav>
+    <style>
+       main {
+          background-image:url("./assets/ColorfulBackground_03.jpg");
+          margin-bottom: 20px;
+          padding: 20px;
+          border: 20px; 
+       }
+      section.card {
+        block-size: 100%;
+      }
+    </style>
 
     <main class="container">
          <h1 class="display-4">My Experience</h1>
          <div class="row">
             <div class="col-6"> 
-               <section class="card">
+               <section class="card" id="Programmer">
                   <figure class="card-header">
                       <h4>Automation Programmer</h4>
                   </figure>
-               <blockquote class="card-body text-center">
+                  <blockquote class="card-body text-center">
                       <strong><p>In December of 2019, I became a Control4-certified Automation
                         Programmer. I learnd and mastered skills to build entire custom smart-home projects
                         from scratch.
