Added comments to html, added more descriptive titiles to <div> tags

--- a/about.html
+++ b/about.html
@@ -8,14 +8,16 @@
   
   <title>About Me</title>
  </head>
+ <!-- Begin body -->
  <body>
+   <!-- Navbar with links to pages -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="#">About Me</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-         <div class="collapse navbar-collapse" id="collapsibleNavbar">
+         <section class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
              <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
@@ -30,38 +32,40 @@
               <a class="nav-link" href="contact.html">Contact</a>
              </li>
           </ul>
-        </div>
+        </section>
       </nav>
+      <!-- Header -->
     <header class="container">
+      <!-- Headline -->
        <h1 class="display-4">About Me</h1>
+       <!-- My Picture -->
          <section class="row">
            <figure class="col-3">
              <img class="img-fluid" 
               src="assets/Myself.JPG" 
               alt="Me" title="Me">
            </figure>
-
+         <!-- Bio -->
           <p class=" jumbotron col-9"> <strong> I'm Dylan breznay!</strong> I was born in Redondo Beach, CA. I moved to nashville when i was
               3 with my family and have called it home ever since. I currently live in Franklin, TN. I am a father
               to a 7 year old son. I currently work as a Low volt tech/Automation Programmer for Home Theatre experts LLC
           </p>
-
          </section>
-
-
-        </header>
+     </header>
+    <!-- Footer with social links -->
     <footer class="container-fluid footer-style fixed-bottom">
         <div class="container">
           <div class="row">
               <div class="col-md-6">
                 <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
               
-                <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+                <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline" ><i class="fa fa-fw fa-instagram"></i></a>
               </div>
           </div>
       </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- JS links -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
