--- a/experience.html
+++ b/experience.html
@@ -8,14 +8,16 @@
   
   <title>Experience</title>
  </head>
+ <!-- Begin body -->
  <body>
+   <!-- Nav bar with links to pages-->
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="">Experience</a>
+        <a class="navbar-brand" href="#">Experience</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-         <div class="collapse navbar-collapse" id="collapsibleNavbar">
+         <section class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
              <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
@@ -30,8 +32,9 @@
               <a class="nav-link" href="contact.html">Contact</a>
              </li>
           </ul>
-        </div>
+        </section>
     </nav>
+    <!-- Style -->
     <style>
 
 
@@ -49,7 +52,7 @@
          border: 2px;
          border-color: lightseagreen;
        }
-       
+
        main {
           background-image:url("./assets/ColorfulBackground_03.jpg");
 
@@ -70,23 +73,30 @@
       }
 
     </style>
-
+    <!-- Main page content/cards -->
     <main class="container">
+      <!-- Header -->
        <header class="jumbotron">
+         <!-- Headline -->
          <h1 class="display-4 text-center"><strong>My Experience</strong></h1>
        </header>
+       <!-- Cards -->
           <div class="row">
             <div class="col-6"> 
                <section class="card" id="Programmer">
+                 <!-- Card header -->
                   <figure class="card-header bg-md-dark">
+                    <!-- Card headline -->
                       <h4>Automation Programmer</h4>
                   </figure>
+                  <!-- Card body -->
                   <blockquote class="card-body text-center">
                       <strong><p>In December of 2019, I became a Control4-certified Automation
                         Programmer. I learnd and mastered skills to build entire custom smart-home projects
                         from scratch.
                       </p></strong> 
                    </blockquote>
+                   <!-- Unordered list -->
                    <ul>
                      <li>I customized lighting scenes for various events/settings</li>
                      <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
@@ -98,6 +108,7 @@
           <div class="col-6">
              <section class="card">
                   <figure class="card-header">
+                    <!-- -->
                     <h4>Low Voltage Technician</h4>
                   </figure>
                   <blockquote class="card-body text-center">
@@ -112,6 +123,7 @@
           </div>
        </div>
      </main>
+     <!-- Footer with social links-->
      <footer class="container-fluid footer-style fixed-bottom">
       <div class="container">
         <div class="row">
@@ -123,6 +135,7 @@
         </div>
     </div>
   </footer>
+  <!-- JS links -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
