--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
           </ul>
         </div>
       </nav>
-
+     <!-- Header -->
       <header class="jumbotron text-center bg-md">
-          <img class="img-fluid" 
-           src="assets/nashville.jpeg" 
-           alt="Me" title="Me">
+        <!-- Headlines -->
         <h1 class="display-4">Welcome!</h1>
         <h4>Welcome to my portoflio website</h4>
+
     </header>
+
+    <!-- Footer with social links -->
     <footer class="container-fluid footer-style fixed-bottom">
-      <div class="container">
+      <figure class="container">
         <div class="row">
             <div class="col-md-6">
               <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -49,8 +50,9 @@
               <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
             </div>
         </div>
-    </div>
+      </figure>
   </footer>
+  <!-- JS lnks -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
