--- a/about.html
+++ b/about.html
@@ -68,6 +68,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
+  <script src="https://kit.fontawesome.com/1fd481dcff.js" crossorigin="anonymous"></script>
  </body>
 </html>
