--- a/experience.html
+++ b/experience.html
@@ -39,33 +39,27 @@
 
 
        body{
-         background-color: teal;
+         background-color:thistle;
        }
 
        .navbar {
-         background-color: rgb(124, 124, 124);
+         background-color:#343a40;
        }
 
        .jumbotron {
          background-color: whitesmoke;
-         border-radius: 30%;
-         border: 2px;
-         border-color: lightseagreen;
+  
        }
 
        main {
           background-image:url("./assets/ColorfulBackground_03.jpg");
 
           padding: 20px;
-
        }
 
-      section.card {
-        align-content:space-between, space-around;
-        block-size: 100%;
-        padding: 20px;
-        margin-bottom:20px;
-      }
+       .card {
+         align-content:space-around;
+       }
 
       footer {
          background-color:lightgray;
@@ -83,45 +77,26 @@
        <!-- Cards -->
           <div class="row">
             <div class="col-6"> 
-               <section class="card" id="Programmer">
-                 <!-- Card header -->
-                  <figure class="card-header bg-md-dark">
-                    <!-- Card headline -->
-                      <h4>Automation Programmer</h4>
-                  </figure>
-                  <!-- Card body -->
-                  <blockquote class="card-body text-center">
-                      <strong><p>In December of 2019, I became a Control4-certified Automation
-                        Programmer. I learnd and mastered skills to build entire custom smart-home projects
-                        from scratch.
-                      </p></strong> 
-                   </blockquote>
-                   <!-- Unordered list -->
-                   <ul>
-                     <li>I customized lighting scenes for various events/settings</li>
-                     <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
-                     <li>I integrated programs that allowed home owners to easily control all aspects 
-                    of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
-                   </ul> 
-              </section>
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                 <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 </div>
+              </div>
             </div>
-          <div class="col-6">
-             <section class="card">
-                  <figure class="card-header">
-                    <!-- -->
-                    <h4>Low Voltage Technician</h4>
-                  </figure>
-                  <blockquote class="card-body text-center">
-                  <strong><p>Since February of 2019 I've also been a Tech at Home Theatre Experts LLC </p></strong> 
-                  </blockquote>
-                  <ul>
-                  <li>I pre-wire houses to be integrated with Contol4 Smart Home Technologies</li>
-                  <li>I install home theatre equipment such as tvs, projectors, and surround sound systems</li>
-                  <li>I provide services for equipent installed by our company by troubleshooting issues as well as Control4 integration </li>
-                </ul> 
-             </section>
+
+          <div class="row">   
+            <div class="col-6">
+              <section class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <figure class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </section>
+              </figure>
           </div>
-       </div>
+            
+            </div>
+          
      </main>
      <!-- Footer with social links-->
      <footer class="container-fluid footer-style fixed-bottom">
@@ -139,6 +114,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/1fd481dcff.js" crossorigin="anonymous"></script>
    
  </body>
 </html>
