made changes to layout and renamed link to portfolio in html and nav bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-              <a class="nav-link" href="experience.html">Experience</a>
+              <a class="nav-link" href="portfolio.html">Experience</a>
              </li>
              <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -32,6 +32,38 @@
           </ul>
         </div>
       </nav>
+         <!-- Style -->
+    <style>
+
+
+      body{
+        background-image: url("./assets/ColorfulBackground_03.jpg");
+      }
+
+      .navbar {
+        background-color:#343a40;
+      }
+
+      .jumbotron {
+        background-color: whitesmoke;
+        margin-top: 10px;
+ 
+      }
+
+      .card {
+        align-content:space-around;
+      }
+
+     footer {
+       background-color:#343a40;
+         
+     }
+
+     i {
+      color:whitesmoke;
+    }
+
+   </style>
      <!-- Header -->
       <header class="jumbotron text-center bg-md">
         <!-- Headlines -->
@@ -41,17 +73,16 @@
     </header>
 
     <!-- Footer with social links -->
-    <footer class="container-fluid footer-style fixed-bottom">
-      <figure class="container">
-        <div class="row">
-            <div class="col-md-6">
-              <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-            
-              <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-            </div>
-        </div>
-      </figure>
-  </footer>
+   <footer class="container-fluid footer-style fixed-bottom">
+    <figure class="container">
+      <div class="row">
+          <div class="col-md-6"> 
+            <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu"><i class="fa fa-fw fa-linkedin"></i></a>
+            <a  target="_blank" href="https://github.com/dbreznay"><i class="fab fa-github"></i></a>
+            <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" ><i class="fab fa-instagram-square"></i></a>
+          </div>
+        </figure>
+    </footer> 
   <!-- JS lnks -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
