--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Experience</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
              </li>
              <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
