--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   
-  <title>Experience</title>
+  <title>My Portfolio</title>
  </head>
  <!-- Begin body -->
  <body>
@@ -26,7 +26,7 @@
               <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Experience</a>
+              <a class="nav-link" href="portfolio.html">Porfolio</a>
              </li>
              <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
