--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
  <body>
    <!-- Nav bar with links to pages-->
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#">Experience</a>
+        <a class="navbar-brand" href="#">Portfolio</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
