reverted cards layout to commit 0030331 due to issues with new layout. removed card with low volt tech info and downsized portfolio page to only one card

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
       i {
        color:whitesmoke;
      }
-
+    
     </style>
     <!-- Main page content/cards -->
     <main class="container">
@@ -71,21 +71,29 @@
          <h2 class="display-6 text-center">My portfolio</h2>
        </header>
 
-       <!-- Cards -->
-       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+       <!-- Card-->
+       <div class="row">
+        <div class="col-12"> 
+           <section class="card">
+              <figure class="card-header text-center">
+                  <h4>Automation Programmer</h4>
+              </figure>
+           <blockquote class="card-body text-center">
+                  <strong><p>In December of 2019, I became a Control4-certified Automation
+                    Programmer. I learnd and mastered skills to build entire custom smart-home projects
+                    from scratch.
+                  </p></strong> 
+               </blockquote>
+               <ul>
+                 <li>I customized lighting scenes for various events/settings</li>
+                 <li>I created custom "When/Then" macros for various applications such as "Entertain" and "Dining" events, that allowed users to set the appropriate enviornment for any occasion</li>
+                 <li>I integrated programs that allowed home owners to easily control all aspects 
+                of their home lighting, entertainment, confort and security from one device with ease and confidence </li>
+               </ul> 
+          </section>
         </div>
-      </div>
+        <br> 
 
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-        
      </main>
      <!-- Footer with social links-->
     <footer class="container-fluid footer-style fixed-bottom">
