--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,10 @@
   
        }
 
+       .card { 
+         margin-bottom: 50px;
+       }
+
       footer {
         background-color:#343a40;
           
