--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="form_name">Firstname *</label>
-                <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                <input id="form_name" type="text" name="name" class="form-control" placeholder="Dylan *" required="required" data-error="Firstname is required.">
                 <div class="help-block with-errors"></div>
               </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="form_lastname">Lastname *</label>
-                <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Breznay *" required="required" data-error="Lastname is required.">
                 <div class="help-block with-errors"></div>
               </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="form_email">Email *</label>
-                <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                <input id="form_email" type="email" name="email" class="form-control" placeholder="breznay@me.com *" required="required" data-error="Valid email is required.">
                 <div class="help-block with-errors"></div>
               </div>
             </div>
@@ -110,7 +110,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="form_phone">Phone</label>
-                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="(615).739.8121 *">
                 <div class="help-block with-errors"></div>
               </div>
             </div>
@@ -134,7 +134,7 @@
             </div>
           </div>
         </div>
-                
+
         </form>
     <!-- Footer -->
       <footer class="container-fluid footer-style fixed-bottom">
