made significant changes to portfolio to meet new reqs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <figure class="container">
       <div class="row">
           <div class="col-md-6"> 
-            <a  target="_blank" href="https://my.indeed.com/p/dylanb-tmp9rsu"><i class="fa fa-fw fa-linkedin"></i></a>
+            <a  target="_blank" href="https://www.linkedin.com/in/dylan-breznay-a76974162/"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://github.com/dbreznay"><i class="fab fa-github"></i></a>
             <a  target="_blank" href="https://instagram.com/dylan.breznay?r=nametag" ><i class="fab fa-instagram-square"></i></a>
           </div>
