added target _blank to all external links

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,8 +108,8 @@
             <h6>Phone: 615.739.8121</h6>
 
             <div class="card-body text-center">
-              <a href="https://www.linkedin.com/in/dylan-breznay-a76974162/" class="card-link">linkedIn</a>
-              <a href="https://github.com/dbreznay" class="card-link">Github</a>
+              <a target="_blank" href="https://www.linkedin.com/in/dylan-breznay-a76974162/" class="card-link">linkedIn</a>
+              <a target="_blank" href="https://github.com/dbreznay" class="card-link">Github</a>
             </div>
              
         </header>
@@ -129,8 +129,8 @@
       </div>
       <img src="https://user-images.githubusercontent.com/60904436/85801109-cbcbb300-b707-11ea-8b04-483cb26e0106.png" class="card-img-bottom" alt="Project1">
       <div class="card-body text-center">
-        <a href="https://dbreznay.github.io/Recipe-Hub/." class="card-link">Live App</a>
-        <a href="https://github.com/dbreznay/Recipe-Hub" class="card-link">Github Repo</a>
+        <a target="_blank" href="https://dbreznay.github.io/Recipe-Hub/." class="card-link">Live App</a>
+        <a target="_blank" href="https://github.com/dbreznay/Recipe-Hub" class="card-link">Github Repo</a>
       </div>
     </div>
   </div>
@@ -142,8 +142,8 @@
       </div>
       <img src="https://user-images.githubusercontent.com/60904436/90958432-278d9080-e45a-11ea-8577-1baa9d9c33fb.png" class="card-img-bottom" alt="Project2">
       <div class="card-body text-center">
-       <a href="https://glacial-reef-34949.herokuapp.com/" class="card-link">Live App</a>
-       <a href="https://github.com/dbreznay/Daring-Donkeys" class="card-link">Github Repo</a>
+       <a target="_blank" href="https://glacial-reef-34949.herokuapp.com/" class="card-link">Live App</a>
+       <a target="_blank" href="https://github.com/dbreznay/Daring-Donkeys" class="card-link">Github Repo</a>
      </div>
     </div>
   </div>
@@ -162,8 +162,8 @@
         </div>
         <img src="https://user-images.githubusercontent.com/60904436/84614179-f48fb500-ae8a-11ea-93bd-013ad56627a3.png" class="card-img-bottom" alt="Weather-Dashboard">
         <div class="card-body text-center">
-          <a href="https://dbreznay.github.io/06Weather-Dashboard/" class="card-link">Live App</a>
-          <a href="https://github.com/dbreznay/06Weather-Dashboard" class="card-link">Github Repo</a>
+          <a target="_blank" href="https://dbreznay.github.io/06Weather-Dashboard/" class="card-link">Live App</a>
+          <a target="_blank" href="https://github.com/dbreznay/06Weather-Dashboard" class="card-link">Github Repo</a>
         </div>
       </div>
     </div>
@@ -175,8 +175,8 @@
         </div>
         <img src="https://user-images.githubusercontent.com/60904436/91790190-bf674900-ebd5-11ea-9c9d-2a22d58408b9.jpg" class="card-img-bottom" alt="Password-Generator">
         <div class="card-body text-center">
-         <a href="https://dbreznay.github.io/Password-Generator/" class="card-link">Live App</a>
-         <a href="https://github.com/dbreznay/Password-Generator" class="card-link">Github Repo</a>
+         <a target="_blank" href="https://dbreznay.github.io/Password-Generator/" class="card-link">Live App</a>
+         <a target="_blank" href="https://github.com/dbreznay/Password-Generator" class="card-link">Github Repo</a>
        </div>
       </div>
     </div>
@@ -190,8 +190,8 @@
         </div>
         <img src="https://user-images.githubusercontent.com/60904436/84215257-50250180-aa8b-11ea-9c18-f81f8e567fa2.gif" class="card-img-bottom" alt="Day-Planner">
         <div class="card-body text-center">
-          <a href="https://dbreznay.github.io/Day-Planner/" class="card-link">Live App</a>
-          <a href="https://github.com/dbreznay/Day-Planner" class="card-link">Github Repo</a>
+          <a target="_blank" href="https://dbreznay.github.io/Day-Planner/" class="card-link">Live App</a>
+          <a target="_blank" href="https://github.com/dbreznay/Day-Planner" class="card-link">Github Repo</a>
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
         </div>
         <img src="https://user-images.githubusercontent.com/60904436/89605691-c9469800-d833-11ea-8dd3-3560f7151bcb.gif" class="card-img-bottom" alt="Employee-Tracker">
         <div class="card-body text-center">
-         <a href="https://github.com/dbreznay/Employee-Tracker" class="card-link">Github Repo</a>
+         <a target="_blank" href="https://github.com/dbreznay/Employee-Tracker" class="card-link">Github Repo</a>
        </div>
       </div>
     </div>
